added descriptions to lesson areas

--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -5,7 +5,7 @@
         <label for="lesson-title" class="form-label">Issue</label>
         <input type="text" id="lesson-title" name="lesson-title" class="form-input form-control" />
     </div>
-    <div>
+    <div class="form-group">
         <label for="desc">Description of the Issue</label>
         <textarea type="text" id="desc" name="desc" class="form-textarea form-control m2"></textarea>
     </div>
