--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                     <h1 class="uppercase flex-column"><span>Nebula</span><span style="font-size: 50px;">Edu</span></h1>
                 </a>
             </div>
-            <div>
+            <div class="position-relative">
                 <img class="ship-img" src="/images/ship-trail.png" alt="Rocket Ship Graphic" />
             </div>
             <div class="col-1 col-lg-1 col-xl-1" style="position: relative; top: 25px;">
@@ -56,10 +56,10 @@
                 <div class="nav-block">
                     <p class="uppercase nav-header">Inspiration</p>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="#">Designs</a></li>
-                        <li class="nav-item"><a href="#">Websites</a></li>
-                        <li class="nav-item"><a href="#">Applications</a></li>
-                        <li class="nav-item"><a href="#">Games</a></li>
+                        <li class="nav-item" id="design"><a href="/design">Designs</a></li>
+                        <li class="nav-item"><a href="/websites">Websites</a></li>
+                        <li class="nav-item"><a href="/applications">Applications</a></li>
+                        <li class="nav-item"><a href="/games">Games</a></li>
                     </ul>
                 </div>
                 </a>
