--- a/views/css.handlebars
+++ b/views/css.handlebars
@@ -1,4 +1,10 @@
 <h2>CSS</h2>
+<div class="mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-3 text-center"><i class="fab fa-css3-alt fa-6x"></i></div>
+        <div class="col-md-9">CSS stands for Cascading Style Sheets. CSS describes how HTML elements are to be displayed on screen, paper, or in other media. CSS saves a lot of work. It can control the layout of multiple web pages all at once. External stylesheets are stored in CSS files.</div>
+    </div>
+</div>
 {{#each lessons as |lessons|}}
     {{> lesson-info lessons }}
 {{/each}}
