--- a/views/html.handlebars
+++ b/views/html.handlebars
@@ -1,4 +1,12 @@
 <h2>HTML</h2>
+<div class="mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-3 text-center"><i class="fab fa-html5 fa-6x"></i></div>
+        <div class="col-md-9">HTML stands for Hyper Text Markup Language. HTML is the standard markup language for
+            creating Web pages. HTML describes the structure of a Web page. HTML consists of a series of elements. HTML
+            elements tell the browser how to display the content.</div>
+    </div>
+</div>
 {{#each lessons as |lessons|}}
     {{> lesson-info lessons }}
 {{/each}}
