--- a/views/js.handlebars
+++ b/views/js.handlebars
@@ -1,4 +1,10 @@
 <h2>Javascript</h2>
+<div class="mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-3 text-center"><i class="fab fa-js fa-6x"></i></div>
+        <div class="col-md-9">JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive. Where HTML and CSS are languages that give structure and style to web pages, JavaScript gives web pages interactive elements that engage a user.</div>
+    </div>
+</div>
 {{#each lessons as |lessons|}}
     {{> lesson-info lessons }}
 {{/each}}
