--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,7 +7,7 @@
     <div class="form-group">
         <label class="form-label" for="password-signup">Password</label>
         <input id="password-signup" type="password" class="form-input form-control" aria-describedby="passwordHelp" />
-        <small id="passwordHelp" class="form-text text-muted">Passwords should be 8 or more characters</small>
+        <small id="passwordHelp" class="form-text text-muted">Passwords must be 8 or more characters</small>
     </div>
     <div class="d-flex align-items-end flex-column justify-content-end mb-3">
         <button type="submit" class="btn btn-deep-purple">Sign up</button>
