--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,7 @@ a {
     text-transform: uppercase;
 }
 /* Header Section Styling */
-header {
+header, footer{
     text-align: center;
     padding: 10px 30px;
     background-image: url('../images/nebula.jpg');
@@ -43,17 +43,18 @@ header div{
     height: 100%;
 }
 
+.login {
+  position: relative;
+  top: 25px;
+}
+
 h2 {
   color: blueviolet;
   font-weight: bold;
 }
 
 .ship-img {
-    position: absolute;
-    width: 40%;
-    margin-right: 50%;
-    transform: translateX(-50%);
-    justify-self: center;
+    width: 100%;
 }
 
 .header-bar{
@@ -122,7 +123,7 @@ button:focus{
     margin: 0 10px 0 0;
 }
 
-.nav-list, .nav-sub-list{
+.nav-list{
     list-style-type: none;
     font-size: calc(12px + .4vw);
     line-height: 30px;
@@ -241,306 +242,45 @@ p.card-text {
   border: none;
 }
 
-/* Flex Content Styles */
-.flex-row {
-    display: flex;
-    flex-wrap: wrap;
+@media only screen and (max-width: 767px) {
+  .rocket-ship {
+    display: none;
+  }
+
+  .ship-img {
+    position: absolute;
+    right: 20px;
+  }
+  .nav-container {
+    border: none;
+    border-bottom: 1px solid var(--grey);
+    text-align: center;
+    padding: 0 25%;
+  }
+
+  h2 {
+    text-align: center;
+    background-color: darkorchid;
+    color: white;
+  }
 }
 
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+@media only screen and (max-width: 576px) {
+  header {
+    height: 150px;
+  };
+  .ship {
+    display: none;
+    position: absolute;
+  }
+  .ship-img {
+    display: none;
+  }
+
+  .login {
+    position: absolute;
+    top: 100px;
+    right: 0;
+    text-align: center;
+  }
 }
-
-.justify-space-between {
-    justify-content: space-between;
-  }
-  
-  .justify-space-around {
-    justify-content: space-around;
-  }
-  
-  .justify-flex-start {
-    justify-content: flex-start
-  }
-  
-  .justify-flex-end {
-    justify-content: flex-end;
-  }
-  
-  .justify-center {
-    justify-content: center;
-  }
-  
-  .align-stretch {
-    align-items: stretch;
-  }
-  
-  .align-end {
-    align-items: flex-end;
-  }
-  
-  .align-center {
-    align-items: center;
-  }
-
-  .align-self {
-      align-self: center;
-  }
-  
-  .col-auto {
-    flex-grow: 1;
-  }
-  
-  .col-1 {
-    flex: 0 0 calc(100% * 1 / 12 - 2%);
-  }
-  
-  .col-2 {
-    flex: 0 0 calc(100% * 2 / 12 - 2%);
-  }
-  
-  .col-3 {
-    flex: 0 0 calc(100% * 3 / 12 - 2%);
-  }
-  
-  .col-4 {
-    flex: 0 0 calc(100% * 4 / 12 - 2%);
-  }
-  
-  .col-5 {
-    flex: 0 0 calc(100% * 5 / 12 - 2%);
-  }
-  
-  .col-6 {
-    flex: 0 0 calc(100% * 6 / 12 - 2%);
-  }
-  
-  .col-7 {
-    flex: 0 0 calc(100% * 7 / 12 - 2%);
-  }
-  
-  .col-8 {
-    flex: 0 0 calc(100% * 8 / 12 - 2%);
-  }
-  
-  .col-9 {
-    flex: 0 0 calc(100% * 9 / 12 - 2%);
-  }
-  
-  .col-10 {
-    flex: 0 0 calc(100% * 10 / 12 - 2%);
-  }
-  
-  .col-11 {
-    flex: 0 0 calc(100% * 11 / 12 - 2%);
-  }
-  
-  .col-12 {
-    flex: 0 0 100%;
-  }
-
-    /* col-xl */
-    @media screen and (min-width: 1200px) {
-        .col-xl-1 {
-          flex: 0 0 calc(100% * 1 / 12 - 2%);
-        }
-      
-        .col-xl-2 {
-          flex: 0 0 calc(100% * 2 / 12 - 2%);
-        }
-      
-        .col-xl-3 {
-          flex: 0 0 calc(100% * 3 / 12 - 2%);
-        }
-      
-        .col-xl-4 {
-          flex: 0 0 calc(100% * 4 / 12 - 2%);
-        }
-      
-        .col-xl-5 {
-          flex: 0 0 calc(100% * 5 / 12 - 2%);
-        }
-      
-        .col-xl-6 {
-          flex: 0 0 calc(100% * 6 / 12 - 2%);
-        }
-      
-        .col-xl-7 {
-          flex: 0 0 calc(100% * 7 / 12 - 2%);
-        }
-      
-        .col-xl-8 {
-          flex: 0 0 calc(100% * 8 / 12 - 2%);
-        }
-      
-        .col-xl-9 {
-          flex: 0 0 calc(100% * 9 / 12 - 2%);
-        }
-      
-        .col-xl-10 {
-          flex: 0 0 calc(100% * 10 / 12 - 2%);
-        }
-      
-        .col-xl-11 {
-          flex: 0 0 calc(100% * 11 / 12 - 2%);
-        }
-      
-        .col-xl-12 {
-          flex: 0 0 100%;
-        }
-      }
-      
-        /* col-lg */
-  @media screen and (min-width: 992px) {
-    .col-lg-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-    }
-  
-    .col-lg-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-    }
-  
-    .col-lg-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-    }
-  
-    .col-lg-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-    }
-  
-    .col-lg-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-    }
-  
-    .col-lg-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-    }
-  
-    .col-lg-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-    }
-  
-    .col-lg-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-    }
-  
-    .col-lg-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-    }
-  
-    .col-lg-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-    }
-  
-    .col-lg-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-    }
-  
-    .col-lg-12 {
-      flex: 0 0 100%;
-    }
-  }
-
-    /* col-md */
-    @media screen and (min-width: 768px) {
-        .col-md-1 {
-          flex: 0 0 calc(100% * 1 / 12 - 2%);
-        }
-      
-        .col-md-2 {
-          flex: 0 0 calc(100% * 2 / 12 - 2%);
-        }
-      
-        .col-md-3 {
-          flex: 0 0 calc(100% * 3 / 12 - 2%);
-        }
-      
-        .col-md-4 {
-          flex: 0 0 calc(100% * 4 / 12 - 2%);
-        }
-      
-        .col-md-5 {
-          flex: 0 0 calc(100% * 5 / 12 - 2%);
-        }
-      
-        .col-md-6 {
-          flex: 0 0 calc(100% * 6 / 12 - 2%);
-        }
-      
-        .col-md-7 {
-          flex: 0 0 calc(100% * 7 / 12 - 2%);
-        }
-      
-        .col-md-8 {
-          flex: 0 0 calc(100% * 8 / 12 - 2%);
-        }
-      
-        .col-md-9 {
-          flex: 0 0 calc(100% * 9 / 12 - 2%);
-        }
-      
-        .col-md-10 {
-          flex: 0 0 calc(100% * 10 / 12 - 2%);
-        }
-      
-        .col-md-11 {
-          flex: 0 0 calc(100% * 11 / 12 - 2%);
-        }
-      
-        .col-md-12 {
-          flex: 0 0 100%;
-        }
-      }
-
-  /* col-sm */
-  @media screen and (min-width: 640px) {
-    .col-sm-1 {
-      flex: 0 0 calc(100% * 1 / 12 - 2%);
-    }
-  
-    .col-sm-2 {
-      flex: 0 0 calc(100% * 2 / 12 - 2%);
-    }
-  
-    .col-sm-3 {
-      flex: 0 0 calc(100% * 3 / 12 - 2%);
-    }
-  
-    .col-sm-4 {
-      flex: 0 0 calc(100% * 4 / 12 - 2%);
-    }
-  
-    .col-sm-5 {
-      flex: 0 0 calc(100% * 5 / 12 - 2%);
-    }
-  
-    .col-sm-6 {
-      flex: 0 0 calc(100% * 6 / 12 - 2%);
-    }
-  
-    .col-sm-7 {
-      flex: 0 0 calc(100% * 7 / 12 - 2%);
-    }
-  
-    .col-sm-8 {
-      flex: 0 0 calc(100% * 8 / 12 - 2%);
-    }
-  
-    .col-sm-9 {
-      flex: 0 0 calc(100% * 9 / 12 - 2%);
-    }
-  
-    .col-sm-10 {
-      flex: 0 0 calc(100% * 10 / 12 - 2%);
-    }
-  
-    .col-sm-11 {
-      flex: 0 0 calc(100% * 11 / 12 - 2%);
-    }
-  
-    .col-sm-12 {
-      flex: 0 0 100%;
-    }
-  }
