test designs page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,12 +62,11 @@
                     <p class="uppercase nav-header">Inspiration</p>
                     <ul class="nav-list">
                         <li class="nav-item" id="design"><a href="/design">Designs</a></li>
-                        <li class="nav-item"><a href="/websites">Websites</a></li>
-                        <li class="nav-item"><a href="/applications">Applications</a></li>
-                        <li class="nav-item"><a href="/games">Games</a></li>
+                        <li class="nav-item"><a href="/website">Websites</a></li>
+                        <li class="nav-item"><a href="/application">Applications</a></li>
+                        <li class="nav-item"><a href="/game">Games</a></li>
                     </ul>
                 </div>
-                </a>
                 {{#if loggedIn}}
                 <div class="nav-block">
                     <p class="uppercase nav-header">Community</p>
