Fixed Dashboard createdAt issues, detailed code in other areas

--- a/views/edit-lesson.handlebars
+++ b/views/edit-lesson.handlebars
@@ -12,7 +12,10 @@
         <button type="button" class="delete-post-btn btn btn-blue-grey">Delete Lesson</button>
         <button type="submit" class="btn btn-deep-purple">Update</button>
     </div>
-    </form>
+</form>
+
+<h3>Post Comments</h3>
+{{> comments lessons.comments}}
 
 <script src="/javascript/edit-lesson.js"></script>
 <script src="/javascript/delete-lesson.js"></script>
