--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,25 +1,23 @@
 <h2>Your Posts</h2>
 {{#if lessons.length}}
-{{#each lessons as |lessons|}}
-<div class="card mb-3">
-    <div class="row no-gutters">
-        <div class="col-md-1 card-img flex-column align-items-end"></div>
-        <div class="col-md-11">
-            <a href="/dashboard/edit-lesson/{{id}}"><div class="card-body">
-                <span class="card-text flex-row justify-content-between"><p class="card-text"><small class="text-muted"> {{user.username}} {{ format_date createdAt }}</small></p><p class="card-text"><small class="text-muted votes"><i class="fas fa-star animated bounceIn"></i> {{vote_count}} {{format_plural "Star" vote_count}}</small></p></span>
-                <h5 class="card-title flex-row justify-content-between">{{title}}<p class="card-text"><small class="text-muted votes"></small></p></h5>
-                <p class="card-text">{{desc}}</p>
-               <p class="card-text">{{comments.length}} {{format_plural "Comment" comments.length}}</p>
-            </div></a>
+    {{#each lessons as |lessons|}}
+    <div class="card mb-3">
+        <div class="row no-gutters">
+            <div class="col-md-1 card-img flex-column align-items-end"></div>
+            <div class="col-md-11">
+                <a href="/dashboard/edit-lesson/{{id}}"><div class="card-body">
+                    <span class="card-text flex-row justify-content-between"><p class="card-text"><small class="text-muted"> {{user.username}} on {{format_date createdAt}}</small></p><p class="card-text"><small class="text-muted votes"><i class="fas fa-star animated bounceIn"></i> {{vote_count}} {{format_plural "Star" vote_count}}</small></p></span>
+                    <h5 class="card-title flex-row justify-content-between">{{title}}<p class="card-text"><small class="text-muted votes"></small></p></h5>
+                    <p class="card-text">{{desc}}</p>
+                <p class="card-text">{{comments.length}} {{format_plural "Comment" comments.length}}</p>
+                </div></a>
+            </div>
         </div>
     </div>
-</div>
-{{/each}}
+    {{/each}}
 {{else}}
 
 <i class="far fa-sad-tear fa-10x text-muted my-3 mx-5"></i>
 <p>You don't have any posts right now.</p> 
 <p><small>Try adding a post in the <a href="/community">Community</a></small></p>
 {{/if}}
- 
-<script src="/javascript/add-lesson.js"></script>
