added content to inspiration sites

--- a/views/design.handlebars
+++ b/views/design.handlebars
@@ -1,1 +1,42 @@
-<h3>Incoming! Stay Tuned! :D</h3>
+<h2>Design Websites</h2>
+<p>Here's some sites that might inspire you to become a Web Site Designer!</p>
+
+<a href="http://www.feedmusic.com/">
+    <div class="card mb-4">
+        <img class="card-img-top" src="https://blog.hubspot.com/hs-fs/hubfs/00-Blog-Related_Images/blog/images/Screen_Shot_2015-08-04_at_4.50.49_PM.png?width=667&height=353&name=Screen_Shot_2015-08-04_at_4.50.49_PM.png" alt="Card Image">
+        <div class="card-body">
+            <h3 class="card-title">Feed</h3>
+            <p class="card-text">Not only is Feed an interesting concept, but it also has a stunning execution that challenges our understanding of what is possible on the web. Through a creative blend of animation and video, the site immerses the user into a very engaging experience. As an atypical site, it contains several unique usability elements as well, including a navigation that doubles as a scroll progress bar.</p>
+        </div>
+    </div>
+</a>
+
+<a href="http://www.etq-amsterdam.com/">
+    <div class="card mb-4">
+        <img class="card-img-top" src="https://blog.hubspot.com/hs-fs/hubfs/00-Blog-Related_Images/blog/images/Screen_Shot_2015-08-04_at_5.16.53_PM.png?width=667&height=353&name=Screen_Shot_2015-08-04_at_5.16.53_PM.png" alt="Card Image">
+        <div class="card-body">
+            <h3 class="card-title">ETQ</h3>
+            <p class="card-text">ETQ takes a very minimalistic approach to ecommerce with their stripped-down site with big, compelling visuals of their product. Simple, flat, color-based backgrounds accompanied by strong typography help to keep the focus on exactly what the user came there to see: shoes.</p>
+        </div>
+    </div>
+</a>
+
+<a href="http://www.mikiyakobayashi.com/">
+    <div class="card mb-4">
+        <img class="card-img-top" src="https://blog.hubspot.com/hs-fs/hubfs/00-Blog-Related_Images/blog/images/Screen_Shot_2015-08-04_at_5.26.55_PM.png?width=667&height=353&name=Screen_Shot_2015-08-04_at_5.26.55_PM.png" alt="Card Image">
+        <div class="card-body">
+            <h3 class="card-title">Mikiya Kobayashi</h3>
+            <p class="card-text">Mikiya is a Product Designer with a minimalistic portfolio that showcases his work through strong photography and subtle animations. His full site was originally created in Japanese and then translated into English, helping demonstrate the international scalability of his design.</p>
+        </div>
+    </div>
+</a>
+
+<a href="http://wovenmagazine.com/">
+    <div class="card mb-4">
+        <img class="card-img-top" src="https://blog.hubspot.com/hs-fs/hubfs/00-Blog-Related_Images/blog/images/Screen_Shot_2015-08-11_at_5.44.09_PM.png?width=667&height=353&name=Screen_Shot_2015-08-11_at_5.44.09_PM.png" alt="Card Image">
+        <div class="card-body">
+            <h3 class="card-title">Woven Magazine</h3>
+            <p class="card-text">Woven is an online publication that celebrates artists, craftsmen, and makers alike. To me, they represent a confirmation that publications can (and should) have beautiful, engaging sites with easy-to-read content. Free of distractions like pop-ups and obtrusive ads, this site all about the experience of the content itself.</p>
+        </div>
+    </div>
+</a>
