--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,9 +36,9 @@
                 <div class="col-12 col-sm-1 login text-center">
                     {{!-- Logout Area only displays if User is loggedIn --}}
                     {{#if loggedIn}}
-                    <a href="/logout" id="logout" class="test">Logout</a>
+                        <a href="/logout" id="logout" class="test">Logout</a>
                     {{else}}
-                    <a href="/login" id="login-btn" class="test">Login</a>
+                        <a href="/login" id="login-btn" class="test">Login</a>
                     {{/if}}
                 </div>
             </div>
@@ -83,14 +83,42 @@
         <main class="container col-12 col-sm-12 col-md-8">
             {{{ body }}}
         </main>
+    </div>
+</div>
 
-        {{!-- <footer>
-            <div class="container">
-                <div class="row">
-                    <p>Team Lemon</p>
-                </div>
-            </div>
-        </footer> --}}
+<div class="row text-center footer footer-1">
+      <div class="col-md-4 box">
+        <span class="copyright quick-links">Made with <i class="far fa-heart" style="color: red;"></i> by Team Lemon
+        </span>
+      </div>
+      <div class="col-md-4 box">
+        <ul class="list-inline social-buttons">
+          <li class="list-inline-item">
+            <a href="#">
+            <i class="fab fa-twitter"></i>
+          </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4 box">
+        <ul class="list-inline quick-links">
+          <li class="list-inline-item">
+            <a href="#">Privacy Policy</a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">Terms of Use</a>
+          </li>
+        </ul>
     </div>
 </div>
 
