--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -78,6 +78,24 @@
                 {{/if}}
             </div>
         </nav>
+        {{!-- <button id="myBtn">Open Modal</button>
+        <div id="myModal" class="modal"> --}}
+
+        {{!-- <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Modal Header</h2>
+            </div>
+            <div class="modal-body">
+            <p>Some text in the Modal Body</p>
+            <p>Some other text...</p>
+         </div>
+            <div class="modal-footer">
+            <h3>Modal Footer</h3>
+        </div>
+        </div>
+        </div> --}}
 
         {{!-- Main Body/Content Area --}}
         <main class="container col-12 col-sm-12 col-md-8">
@@ -142,5 +160,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
     {{!-- Anime.js Animation --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js" integrity="sha512-LfB+BcvR3zBt7ebVskhSWiSbEUiG3p5EcCprkieldsKhBeR6wpnLi0VpWC2GNgVGWP2n/skO8Bx2oKNjUhXCkw==" crossorigin="anonymous"></script>
+    {{!-- For the "how to contribute area" --}}
+    {{!-- <script src="/javascript/howTo.js"></script> --}}
 </body>
 </html>
