--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,9 +18,10 @@
 </head>
 
 <body>
+<div class="page-container">
     <!-- Header Area -->
     <header id="#" class="header-bar">
-        <div class=" container">
+        <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-1 column">
                     <a href="/">
@@ -36,52 +37,52 @@
                 <div class="col-12 col-sm-1 login text-center">
                     {{!-- Logout Area only displays if User is loggedIn --}}
                     {{#if loggedIn}}
-                        <a href="/logout" id="logout" class="test">Logout</a>
+                    <a href="/logout" id="logout" class="test">Logout</a>
                     {{else}}
-                        <a href="/login" id="login-btn" class="test">Login</a>
+                    <a href="/login" id="login-btn" class="test">Login</a>
                     {{/if}}
                 </div>
             </div>
         </div>
     </header>
 
-<div class="container">
-    <div class="row">
-        <!-- Nav-Bar Area -->
-        <nav class="nav-wrapper col-12 col-sm-12 col-md-3">
-            <div class="nav-container">
-                <div class="nav-block">
-                    <p class="uppercase nav-header">Learn</p>
-                    <ul class="nav-list">
-                        <li class="nav-item" id="html"><a href="/html">HTML</a></li>
-                        <li class="nav-item" id="css"><a href="/css">CSS</a></li>
-                        <li class="nav-item" id="js"><a href="/js">Javascript</a></li>
-                    </ul>
+    <div class="container content-area">
+        <div class="row">
+            <!-- Nav-Bar Area -->
+            <nav class="nav-wrapper col-12 col-sm-12 col-md-3">
+                <div class="nav-container">
+                    <div class="nav-block">
+                        <p class="uppercase nav-header">Learn</p>
+                        <ul class="nav-list">
+                            <li class="nav-item" id="html"><a href="/html">HTML</a></li>
+                            <li class="nav-item" id="css"><a href="/css">CSS</a></li>
+                            <li class="nav-item" id="js"><a href="/js">Javascript</a></li>
+                        </ul>
+                    </div>
+                    <div class="nav-block">
+                        <p class="uppercase nav-header">Inspiration</p>
+                        <ul class="nav-list">
+                            {{!-- Href are set to /design atm for consolidation of router requests --}}
+                            <li class="nav-item" id="design"><a href="/design">Designs</a></li>
+                            <li class="nav-item"><a href="/application">Applications</a></li>
+                            <li class="nav-item"><a href="/game">Games</a></li>
+                        </ul>
+                    </div>
+                    {{#if loggedIn}}
+                    <div class="nav-block">
+                        <p class="uppercase nav-header">Community</p>
+                        <ul class="nav-list">
+                            <li class="nav-item"><a href="/community">Community Posts</a></li>
+                            <li class="nav-item"><a href="/dashboard">Your Posts</a></li>
+                        </ul>
+                    </div>
+                    {{/if}}
                 </div>
-                <div class="nav-block">
-                    <p class="uppercase nav-header">Inspiration</p>
-                    <ul class="nav-list">
-                        {{!-- Href are set to /design atm for consolidation of router requests --}}
-                        <li class="nav-item" id="design"><a href="/design">Designs</a></li>
-                        <li class="nav-item"><a href="/application">Applications</a></li>
-                        <li class="nav-item"><a href="/game">Games</a></li>
-                    </ul>
-                </div>
-                {{#if loggedIn}}
-                <div class="nav-block">
-                    <p class="uppercase nav-header">Community</p>
-                    <ul class="nav-list">
-                        <li class="nav-item"><a href="/community">Community Posts</a></li>
-                        <li class="nav-item"><a href="/dashboard">Your Posts</a></li>
-                    </ul>
-                </div>
-                {{/if}}
-            </div>
-        </nav>
-        {{!-- <button id="myBtn">Open Modal</button>
+            </nav>
+            {{!-- <button id="myBtn">Open Modal</button>
         <div id="myModal" class="modal"> --}}
 
-        {{!-- <!-- Modal content -->
+            {{!-- <!-- Modal content -->
         <div class="modal-content">
             <div class="modal-header">
             <span class="close">&times;</span>
@@ -97,52 +98,58 @@
         </div>
         </div> --}}
 
-        {{!-- Main Body/Content Area --}}
-        <main class="container col-12 col-sm-12 col-md-8">
-            {{{ body }}}
-        </main>
+            {{!-- Main Body/Content Area --}}
+            <main class="container col-12 col-sm-12 col-md-8">
+                {{{ body }}}
+            </main>
+        </div>
+        <div class="push"></div>
     </div>
-</div>
 
-<div class="row text-center footer footer-1">
-      <div class="col-md-4 box">
-        <span class="copyright quick-links">Made with <i class="far fa-heart" style="color: red;"></i> by Team Lemon
-        </span>
-      </div>
-      <div class="col-md-4 box">
-        <ul class="list-inline social-buttons">
-          <li class="list-inline-item">
-            <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-4 box">
-        <ul class="list-inline quick-links">
-          <li class="list-inline-item">
-            <a href="#">Privacy Policy</a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">Terms of Use</a>
-          </li>
-        </ul>
+    <footer class="footer footer-1 bottom align-self-end">
+        <div class="container">
+        <div class="row justify-content-between">
+            <div class="col-12 col-lg-3 box">
+                <span class="copyright quick-links">Made with <i class="far fa-heart" style="color: red;"></i> by Team Lemon
+                </span>
+            </div>
+            <div class="col-12 col-lg-3 box">
+                <ul class="list-inline social-buttons">
+                    <li class="list-inline-item">
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-12 col-lg-3 box">
+                <ul class="list-inline quick-links">
+                    <li class="list-inline-item">
+                        <a href="#">Privacy Policy</a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#">Terms of Use</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+    </footer>
     </div>
-</div>
 
     {{!-- Script Area, but only when logged in --}}
     {{#if loggedIn}}
-        <script src="/javascript/logout.js"></script>
+    <script src="/javascript/logout.js"></script>
     {{/if}}
     {{!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -150,17 +157,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script> --}}
-        <!-- JQuery -->
+    <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
     {{!-- Anime.js Animation --}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js" integrity="sha512-LfB+BcvR3zBt7ebVskhSWiSbEUiG3p5EcCprkieldsKhBeR6wpnLi0VpWC2GNgVGWP2n/skO8Bx2oKNjUhXCkw==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js"
+        integrity="sha512-LfB+BcvR3zBt7ebVskhSWiSbEUiG3p5EcCprkieldsKhBeR6wpnLi0VpWC2GNgVGWP2n/skO8Bx2oKNjUhXCkw=="
+        crossorigin="anonymous"></script>
     {{!-- For the "how to contribute area" --}}
     {{!-- <script src="/javascript/howTo.js"></script> --}}
 </body>
+
 </html>
