--- a/views/edit-lesson.handlebars
+++ b/views/edit-lesson.handlebars
@@ -8,7 +8,7 @@
         <label class="form-label" for="desc">Description</label>
         <textarea name="desc" type="text" class="form-input form-control m2">{{lessons.desc}}</textarea>
     </div>
-    <div class="form-group flex-row justify-content-end">
+    <div class="form-group row justify-content-end">
         <button type="button" class="delete-post-btn btn btn-blue-grey">Delete Lesson</button>
         <button type="submit" class="btn btn-deep-purple">Update</button>
     </div>
